# ci-bgf-selector

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: README.md
data/shards_adv/: adv_0.npz  adv_1.npz  adv_10.npz  adv_11.npz  adv_12.npz  adv_13.npz  adv_14.npz  adv_15.npz  adv_16.npz  adv_17.npz  adv_18.npz  adv_19.npz  adv_2.npz  adv_20.npz  adv_21.npz  adv_22.npz  adv_23.npz  adv_24.npz  adv_25.npz  adv_26.npz  adv_27.npz  adv_28.npz  adv_29.npz  adv_3.npz  adv_30.npz  adv_31.npz  adv_32.npz  adv_33.npz  adv_34.npz  adv_35.npz  adv_36.npz  adv_37.npz  adv_38.npz  adv_39.npz  adv_4.npz  adv_40.npz  adv_41.npz  adv_42.npz  adv_43.npz  adv_44.npz  (+20 more)
miso/: __init__.py  physicell_gen.py  physicell_oracle.py  selector_swarm.py
physicell/miso_biomarker_fields/config/: PhysiCell_settings.xml  PhysiCell_settings_probe.xml  PhysiCell_settings_smoke.xml  smoke.xml
physicell/miso_biomarker_fields/custom_modules/: custom.cpp
scripts/evaluation/: eval_selector.py  summarize_eval.py
scripts/physicell/: cache_fields.py  collect_fields.py  run_instance.sh  run_manifest.sh  setup_physicell_project.sh
scripts/training/: gen_advantage_data.py  gen_advantage_shards.sh  train_selector.py
scripts/validation/: validate_fields.py  validate_growth_fields.py
