[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ci-bgf-selector"
version = "0.1.0"
description = "Swarm-relative biological gradient field selection for magnetic nanorobot tumor targeting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "torch>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["miso*"]

